회원가입및 수정삭제, 모달예제

--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -1,23 +1,43 @@
 <div class="jumbotron">
   <h1>User List</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <table class="table">
+    <thead><tr><th>id</th><th>name</th><th>age</th><th>edit</th><th>delete</th></tr></thead>
+    <tbody>
+      <tr ng-repeat="obj in userList">
+        <td> <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" ng-click="getUserInfo(obj.id)">{{obj.id}}</button></td>
+        <td><input type="text" class="form-control" ng-model="obj.name"></td>
+        <td><input type="text" class="form-control" ng-model="obj.age"></td>
+        <td><button type="button" class="btn btn-warning" ng-click="modifyUserInfo(obj.id,obj.name,obj.age)">Edit</button></td>
+        <td><button type="button" class="btn btn-danger" ng-click="deleteUserInfo(obj.id)">Danger</button></td>
+      </tr>
+    </tbody>
+  </table>
+  <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+       
+        <h4 class="modal-title">User Info</h4>
+      </div>
+      <div class="modal-body">
+        <table class="table">
+        <tr><td>ID</td><td>{{userInfo.id}}</td></tr>
+        <tr><td>Name</td><td>{{userInfo.name}}</td></tr>
+        <tr><td>Age</td><td>{{userInfo.age}}</td></tr>  </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  </div>
 </div>
