--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -13,6 +13,12 @@
 			<li class="dropdown">
 				<a ui-sref="login" class="dropdown-toggle" data-toggle="dropdown">Login</a>
 			</li>
+			<li class="dropdown">
+				<a ui-sref="signup" class="dropdown-toggle" data-toggle="dropdown">Signup</a>
+			</li>
+			<li class="dropdown">
+				<a ui-sref="user-list" class="dropdown-toggle" data-toggle="dropdown">User List</a>
+			</li>
 		</ul>
 	</div>
 </div>
