--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,23 +1,24 @@
-<div class="jumbotron">
-  <h1>Login</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <h3 class="text-center">LOGIN</h3>
+    <form name="loginForm" ng-submit="submitLogin()">
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon">
+            <i class="fa fa-envelope-o"></i>
+          </span>
+          <input id="login-userid" type="text" name="user_id" class="form-control input-lg" placeholder="User Id" ng-model="login.user_id" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon">
+            <i class="fa fa-asterisk"></i>
+          </span>
+          <input id="login-password" type="password" name="password" class="form-control input-lg" placeholder="Password" ng-model="login.password" required>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary btn-lg btn-block btn-shadow">Login</button>
+    </form>
+  </div>
 </div>
