--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -7,7 +7,8 @@
     <thead><tr><th>id</th><th>name</th><th>age</th><th>edit</th><th>delete</th></tr></thead>
     <tbody>
       <tr ng-repeat="obj in userList">
-        <td> <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" ng-click="getUserInfo(obj.id)">{{obj.id}}</button></td>
+    
+        <td><a href="detail:{{obj.id}}&{{obj.name}}&{{obj.age}}"><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" ng-click="getUserInfo(obj.id)">{{obj.id}}</button></a></td>
         <td><input type="text" class="form-control" ng-model="obj.name"></td>
         <td><input type="text" class="form-control" ng-model="obj.age"></td>
         <td><button type="button" class="btn btn-warning" ng-click="modifyUserInfo(obj.id,obj.name,obj.age)">Edit</button></td>
